--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,7 +26,7 @@
     <section class="text-center mb-5">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-4 mb-3">
-          <img src="photo-oussama.png" alt="Oussama Missaoui" class="img-fluid rounded-circle shadow" style="max-width: 250px;">
+          <img src="photo-oussama.png" alt="Oussama Missaoui" class="img-fluid rounded-circle" style="max-width: 250px;">
         </div>
         <div class="col-md-6 text-md-start">
           <h2 class="section-title">À propos de moi</h2>
